initial setup to move unit tests

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "TQ\\ExtDirect\\Tests\\": "tests/"
+            "TQ\\ExtDirect\\Tests\\": "tests/Tests/"
         }
     },
     "require": {
