--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: php
+    language: php
 php:
     - 5.5
     - 5.6
@@ -17,4 +17,8 @@ before_script:
     - composer $COMPOSER_PARAM
 
 script:
-    - phpunit
+    - phpunit --coverage-clover=coverage.clover
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
