--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-    language: php
+language: php
 php:
     - 5.5
     - 5.6
@@ -18,3 +18,7 @@ before_script:
 
 script:
     - phpunit --coverage-clover=coverage.clover
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
