--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7",
+        "phpunit/php-token-stream": "1.4.6",
         "symfony/stopwatch": "~2.6|~3.0.0"
     }
 }
