--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "symfony/dependency-injection": "~2.6|~3.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8|~5.1",
+        "phpunit/phpunit": "~4.8,!=4.8.20|~5.1",
         "symfony/stopwatch": "~2.6|~3.0.0"
     }
 }
