--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "symfony/http-foundation": "~2.6|~3.0.0",
         "symfony/validator": "~2.6|~3.0.0",
         "symfony/event-dispatcher": "~2.6|~3.0.0",
-        "symfony/dependency-injection": "~2.6|~3.0.0"
+        "symfony/dependency-injection": "~2.6|~3.0.0",
+        "symfony/security-core": "~2.6|~3.0.0",
+        "symfony/expression-language": "~2.6|~3.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8,!=4.8.20|~5.1",
