--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,10 @@
     "require-dev": {
         "phpunit/phpunit": "~4.8,!=4.8.20|~5.1",
         "symfony/stopwatch": "~2.8|~3.0"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
     }
 }
