--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "symfony/expression-language": "~2.8|~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.7.11",
+        "phpunit/phpunit": "~5.7 >=5.7.11",
         "symfony/stopwatch": "~2.8|~3.0"
     },
     "extra": {
