--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": ">=5.6.0",
         "jms/metadata": "~1.5",
-        "jms/serializer": "~1.1",
+        "jms/serializer": "~1.1 || ~2.0",
         "doctrine/annotations": "~1.0",
         "symfony/http-foundation": "~2.8|~3.0",
         "symfony/validator": "~2.8|~3.0",
