--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "jms/metadata": "~1.5",
+        "jms/metadata": "~1.5 || ~2.0",
         "jms/serializer": "~1.1 || ~2.0",
         "doctrine/annotations": "~1.0",
         "symfony/http-foundation": "~2.8|~3.0",
