--- a/.travis.yml
+++ b/.travis.yml
@@ -3,30 +3,78 @@ language: php
 sudo: false
 
 cache:
-    directories:
-        - $HOME/.composer/cache/files
+  directories:
+    - $HOME/.composer/cache
 
 php:
-    - 7.2
-    - 7.3
-    - nightly
+  - 7.2
+  - 7.3
+  - 7.4
+  - nightly
 
 env:
-  matrix:
-    - COMPOSER_PARAM="update --ansi --prefer-dist --no-interaction --optimize-autoloader --no-suggest --no-progress --prefer-lowest"
-    - COMPOSER_PARAM="update --ansi --prefer-dist --no-interaction --optimize-autoloader --no-suggest --no-progress"
+  global:
+    - COMPOSER_MEMORY_LIMIT=-1
 
-matrix:
+before_install:
+  - composer self-update
+  - composer global require --no-progress --no-scripts --no-plugins symfony/flex dev-master
+
+install:
+  - travis_retry composer update -n --prefer-dist --prefer-stable
+
+script:
+  - vendor/bin/phpunit -v
+
+jobs:
   allow_failures:
     - php: nightly
 
-before_script:
-    - composer selfupdate
-    - composer $COMPOSER_PARAM
+  include:
+    # Tests the lowest set of dependencies
+    - php: 7.2
+      env: LOWEST SYMFONY_DEPRECATIONS_HELPER=999999
+      install:
+        - travis_retry composer update -n --prefer-lowest --prefer-stable --prefer-dist
 
-script:
-    - vendor/bin/phpunit --coverage-clover=coverage.clover
+    # Test against latest all Symfony versions
+    - php: 7.2
+      env: SYMFONY_REQUIRE="3.4.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.2
+      env: SYMFONY_REQUIRE="4.4.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.2
+      env: SYMFONY_REQUIRE="5.0.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.2
+      env: SYMFONY_REQUIRE="5.1.*" SYMFONY_DEPRECATIONS_HELPER=999999
 
-after_script:
-    - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    # Test against latest all Symfony versions
+    - php: 7.3
+      env: SYMFONY_REQUIRE="3.4.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.3
+      env: SYMFONY_REQUIRE="4.4.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.3
+      env: SYMFONY_REQUIRE="5.0.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.3
+      env: SYMFONY_REQUIRE="5.1.*" SYMFONY_DEPRECATIONS_HELPER=999999
+
+    # Test against latest all Symfony versions
+    - php: 7.4
+      env: SYMFONY_REQUIRE="3.4.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.4
+      env: SYMFONY_REQUIRE="4.4.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.4
+      env: SYMFONY_REQUIRE="5.0.*" SYMFONY_DEPRECATIONS_HELPER=999999
+    - php: 7.4
+      env: SYMFONY_REQUIRE="5.1.*" SYMFONY_DEPRECATIONS_HELPER=999999
+
+    # Test against PHP 8
+    - php: nightly
+      env: SYMFONY_DEPRECATIONS_HELPER=weak
+
+    - stage: Coverage
+      php: 7.4
+      script:
+        - ./vendor/bin/phpunit -v --coverage-clover=coverage.clover
+      after_script:
+        - wget https://scrutinizer-ci.com/ocular.phar
+        - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
