--- a/composer.json
+++ b/composer.json
@@ -28,19 +28,20 @@
     "require": {
         "php": ">=7.2.0",
         "ext-json": "*",
-        "jms/metadata": "~2.0",
-        "jms/serializer": "~2.0",
         "doctrine/annotations": "~1.0",
-        "symfony/http-foundation": "~2.8|~3.0",
-        "symfony/validator": "~2.8|~3.0",
-        "symfony/event-dispatcher": "~2.8|~3.0",
-        "symfony/dependency-injection": "~2.8|~3.0",
-        "symfony/security-core": "~2.8|~3.0",
-        "symfony/expression-language": "~2.8|~3.0"
+        "jms/metadata": "~2.0",
+        "jms/serializer": "~2.0 || ~3.0",
+        "symfony/dependency-injection": "~3.0 || ~4.0 || ~5.0",
+        "symfony/event-dispatcher": "~3.0 || ~4.0 || ~5.0",
+        "symfony/expression-language": "~3.0 || ~4.0 || ~5.0",
+        "symfony/http-foundation": "~3.0 || ~4.0 || ~5.0",
+        "symfony/security-core": "~3.0 || ~4.0 || ~5.0",
+        "symfony/validator": "~3.0 || ~4.0 || ~5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7 >=5.7.11",
-        "symfony/stopwatch": "~2.8|~3.0"
+        "phpunit/phpunit": "^8.5",
+        "symfony/phpunit-bridge": "~5.0",
+        "symfony/stopwatch": "~3.0 || ~4.0 || ~5.0"
     },
     "extra": {
         "branch-alias": {
