--- a/composer.json
+++ b/composer.json
@@ -26,22 +26,22 @@
         }
     },
     "require": {
-        "php": ">=7.2.0",
+        "php": "7.4.*|8.0.*|8.1.*",
         "ext-json": "*",
-        "doctrine/annotations": "~1.0",
-        "jms/metadata": "~2.0",
-        "jms/serializer": "~2.0 || ~3.0",
-        "symfony/dependency-injection": "~3.0 || ~4.0 || ~5.0",
-        "symfony/event-dispatcher": "~3.0 || ~4.0 || ~5.0",
-        "symfony/expression-language": "~3.0 || ~4.0 || ~5.0",
-        "symfony/http-foundation": "~3.0 || ~4.0 || ~5.0",
-        "symfony/security-core": "~3.0 || ~4.0 || ~5.0",
-        "symfony/validator": "~3.0 || ~4.0 || ~5.0"
+        "doctrine/annotations": "~1.13",
+        "jms/metadata": "~2.6",
+        "jms/serializer": "~3.17",
+        "symfony/dependency-injection": "~5.0",
+        "symfony/event-dispatcher": "~5.0",
+        "symfony/expression-language": "~5.0",
+        "symfony/http-foundation": "~5.0",
+        "symfony/security-core": "~5.0",
+        "symfony/validator": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
         "symfony/phpunit-bridge": "~5.0",
-        "symfony/stopwatch": "~3.0 || ~4.0 || ~5.0"
+        "symfony/stopwatch": "~5.0"
     },
     "extra": {
         "branch-alias": {
