--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ 'ubuntu-latest', 'ubuntu-20.04' ]
-        php-version: [ '7.4', '8.0', '8.1' ]
+        php-version: [ '7.4' ]
         symfony-version: ['5.0.*', '5.1.*', '5.2.*', '5.3.*', '5.4.*']
 
     runs-on: ${{ matrix.operating-system }}
