--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit backupGlobals="false"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+         backupGlobals="false"
          backupStaticAttributes="false"
          colors="true"
          convertErrorsToExceptions="true"
@@ -8,27 +9,22 @@
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
-         bootstrap="tests/bootstrap.php"
-        >
-    <testsuites>
-        <testsuite name="TEQneers Ext.direct Library">
-            <directory>./tests/</directory>
-        </testsuite>
-    </testsuites>
-
+         bootstrap="tests/bootstrap.php">
+    <coverage>
+        <include>
+            <directory>src</directory>
+        </include>
+    </coverage>
     <php>
         <ini name="error_reporting" value="-1"/>
-        <server name="APP_ENV" value="test" force="true"/>
-        <server name="SHELL_VERBOSITY" value="-1"/>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="max[self]=0"/>
     </php>
-
-	<listeners>
+    <testsuites>
+        <testsuite name="TEQneers Ext.direct Library">
+            <directory>tests</directory>
+        </testsuite>
+    </testsuites>
+    <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener"/>
     </listeners>
-
-    <filter>
-        <whitelist>
-            <directory>./src/</directory>
-        </whitelist>
-    </filter>
 </phpunit>
