--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,8 +7,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ 'ubuntu-latest', 'ubuntu-20.04' ]
-        php-version: [ '7.4' ]
+        operating-system: [ 'ubuntu-latest', 'ubuntu-20.04', 'ubuntu-22.04' ]
+        php-version: [ '8.1' ]
         symfony-version: ['5.0.*', '5.1.*', '5.2.*', '5.3.*', '5.4.*']
 
     runs-on: ${{ matrix.operating-system }}
