--- a/composer.json
+++ b/composer.json
@@ -47,5 +47,10 @@
         "branch-alias": {
             "dev-master": "4.0.x-dev"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     }
 }
