--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install symfony/flex globally
         run: composer global require --no-interaction --no-progress --no-scripts --no-plugins symfony/flex
       - name: Allow plugin symfony/flex to be used
-        run: composer config --no-plugins allow-plugins.symfony/flex true
+        run: composer global config --no-plugins allow-plugins.symfony/flex true
       - name: Validate composer.json and composer.lock
         run: composer validate --no-interaction --no-check-all --strict
       - name: Install PHP dependencies
