--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "require": {
-        "php": "8.0.*|8.1.*",
+        "php": "^8.0",
         "ext-json": "*",
         "doctrine/annotations": "~1.13",
         "jms/metadata": "~2.6",
