--- a/composer.json
+++ b/composer.json
@@ -31,17 +31,17 @@
         "doctrine/annotations": "^1.13|^2.0",
         "jms/metadata": "~2.6",
         "jms/serializer": "~3.17",
-        "symfony/dependency-injection": "~5.0",
-        "symfony/event-dispatcher": "~5.0",
-        "symfony/expression-language": "~5.0",
-        "symfony/http-foundation": "~5.0",
-        "symfony/security-core": "~5.0",
-        "symfony/validator": "~5.0"
+        "symfony/dependency-injection": "6.4.*",
+        "symfony/event-dispatcher": "6.4.*",
+        "symfony/expression-language": "6.4.*",
+        "symfony/http-foundation": "6.4.*",
+        "symfony/security-core": "6.4.*",
+        "symfony/validator": "6.4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/phpunit-bridge": "~5.0",
-        "symfony/stopwatch": "~5.0"
+        "symfony/phpunit-bridge": "6.4.*",
+        "symfony/stopwatch": "6.4.*"
     },
     "extra": {
         "branch-alias": {
